# CacheXL

./: .env.example  .gitignore  CITATION.cff  README.md  pyproject.toml
data/ai2_arc/: data.jsonl
data/aicrypto/: data.jsonl
data/csqa/: data.jsonl
data/gpqa/: data.jsonl
data/gsm8k/: data.jsonl
data/math500/: data.jsonl
data/pubmedqa/: data.jsonl
data/strategyqa/: data.jsonl
docs/: Datasets.md  Reproduction.md
scripts/: compare_methods.py  generate_report.py  prepare_data.py  run_experiments.py  setup_env.sh  stop_experiments.py  test_mock.py
src/: run_bot.py  run_cachexl.py  run_react.py
src/core/: config.py  llm.py  utils.py
src/methods/bot/: prompts.py  workflow.py
src/methods/cachexl/: __init__.py  cache.py  prompts.py  workflow.py
src/methods/react/: actor.py  batching.py  eval.py  reflector.py
src/methods/react/prompts/: __init__.py  loader.py  react.py
