[project]
name = "botofthinking"
version = "0.1.0"
description = "Batch-of-Thought reproduction experiments"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32.3",
  "python-dotenv>=1.0.1",
  "tqdm>=4.66.4",
  "pandas>=3.0.0",
  "matplotlib>=3.9.0",
  "httpx>=0.27.2",
  "datasets>=2.20.0",
  "huggingface_hub>=0.25.2",
  "transformers>=4.48.3",
  "torch>=2.10.0",
  "tabulate>=0.9.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[dependency-groups]
dev = []
